--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: arn:aws:dynamodb:eu-central-1:025388574077:table/Cars
+      Resource: !GetAtt Cars.Arn
   endpointType: REGIONAL
   apiName: apiCars-${self:provider.stage}
   apiKeys:
@@ -32,7 +32,7 @@ provider:
       rateLimit: 100
 functions:
   list:
-    handler: list.handler
+    handler: cars/list.handler
     events:
       - http:
           path: cars
@@ -43,7 +43,7 @@ functions:
             type: COGNITO_USER_POOLS
             authorizerId: !Ref MyAuthorizer
   get:
-    handler: get.handler
+    handler: cars/get.handler
     events:
       - http:
           path: cars/{id}
@@ -54,7 +54,7 @@ functions:
             type: COGNITO_USER_POOLS
             authorizerId: !Ref MyAuthorizer
   create:
-    handler: create.handler
+    handler: cars/create.handler
     events:
       - http:
           path: cars
@@ -65,7 +65,7 @@ functions:
             type: COGNITO_USER_POOLS
             authorizerId: !Ref MyAuthorizer
   edit:
-    handler: edit.handler
+    handler: cars/edit.handler
     events:
       - http:
           path: cars/{id}
@@ -76,7 +76,7 @@ functions:
             type: COGNITO_USER_POOLS
             authorizerId: !Ref MyAuthorizer
   delete:
-    handler: delete.handler
+    handler: cars/delete.handler
     events:
       - http:
           path: cars
@@ -87,88 +87,27 @@ functions:
             type: COGNITO_USER_POOLS
             authorizerId: !Ref MyAuthorizer
   login:
-    handler: login.handler
+    handler: auth/login.handler
     events:
       - http:
           path: login
           method: post
           private: true
   signup:
-    handler: signup.handler
+    handler: auth/signup.handler
     events:
       - http:
           path: signup
           method: post
           private: true
   confirmsignup:
-    handler: confirmsignup.handler
+    handler: auth/confirmsignup.handler
     events:
       - http:
           path: confirmsignup
           method: post
           private: true
 resources:
-  Resources:
-    Cars:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: Cars
-        AttributeDefinitions:
-          - AttributeName: licenseplate
-            AttributeType: S
-        KeySchema:
-          - AttributeName: licenseplate
-            KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
-          
-    MyCognitoPool:
-      Type: AWS::Cognito::UserPool
-      Properties:
-        UserPoolName: MyCognitoPool-${self:provider.stage}
-        Policies:
-          PasswordPolicy:
-            MinimumLength: 8
-            RequireLowercase: true
-            RequireNumbers: true
-            RequireSymbols: true
-            RequireUppercase: true
-            TemporaryPasswordValidityDays: 15
-        UsernameAttributes:
-          - email
-        AutoVerifiedAttributes:
-          - email
-        EmailVerificationMessage: 'Tu código de verificación para MyCarsApp es {####}'
-        EmailVerificationSubject: 'Tu código para MyCarsApp'
-        MfaConfiguration: OFF
-        UserPoolTags:
-          Env: ${self:provider.stage}
-        AdminCreateUserConfig:
-          AllowAdminCreateUserOnly: false
-          InviteMessageTemplate:
-            EmailMessage: 'Esta es tu contraseña para tu cuenta {username} en MyCarsApp: {####}'
-            EmailSubject: 'Tu cuenta para MyCarsApp'
-        UsernameConfiguration:
-          CaseSensitive: false
-          
-    MyCognitoPoolClient:
-      Type: AWS::Cognito::UserPoolClient
-      Properties:
-        ClientName: MyCognitoPoolClient-${self:provider.stage}
-        ExplicitAuthFlows:
-          - USER_PASSWORD_AUTH
-        RefreshTokenValidity: 30
-        UserPoolId:
-          Ref: MyCognitoPool
-    
-    MyAuthorizer:
-      Type: AWS::ApiGateway::Authorizer
-      Properties:
-        Name: MyAuthorizer-${self:provider.stage}
-        RestApiId:
-          Ref: ApiGatewayRestApi
-        Type: COGNITO_USER_POOLS
-        ProviderARNs:
-          - !GetAtt MyCognitoPool.Arn
-        IdentitySource: method.request.header.Authorization
+  - ${file(resources/dynamodb_serverless.yml)}
+  - ${file(resources/cognito_serverless.yml)}
+  - ${file(resources/apigateway_serverless.yml)}
